Refactor SpotBugs exclusions and remove deprecated @SuppressFBWarnings annotations